--- a/controller/config/crd/bases/core.kapp.dev_components.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_components.yaml
@@ -92,6 +92,8 @@ spec:
             dnsPolicy:
               description: DNSPolicy defines how a pod's DNS will be configured.
               type: string
+            enableResourcesRequests:
+              type: boolean
             env:
               items:
                 description: EnvVar represents an environment variable present in
@@ -233,8 +235,6 @@ spec:
               additionalProperties:
                 type: string
               type: object
-            podAffinityType:
-              type: string
             ports:
               items:
                 properties:
@@ -280,6 +280,8 @@ spec:
                 - mountPath
                 type: object
               type: array
+            preferNotCoLocated:
+              type: boolean
             readinessProbe:
               description: Probe describes a health check to be performed against
                 a container to determine whether it is alive or ready to receive traffic.
