--- a/controller/config/samples/core_v1alpha1_tutorial_2_bookinfo.yaml
+++ b/controller/config/samples/core_v1alpha1_tutorial_2_bookinfo.yaml
@@ -25,7 +25,7 @@ metadata:
     namespace: kapp-bookinfo
 spec:
     image: docker.io/istio/examples-bookinfo-details-v1:1.15.0
-    podAffinityType: prefer-fanout
+    preferNotCoLocated: true
     nodeSelectorLabels:
       kubernetes.io/os: linux
     cpu: 50m
@@ -45,7 +45,7 @@ metadata:
     namespace: kapp-bookinfo
 spec:
     image: docker.io/istio/examples-bookinfo-ratings-v1:1.15.0
-    podAffinityType: prefer-fanout
+    preferNotCoLocated: true
     nodeSelectorLabels:
       kubernetes.io/os: linux
     cpu: 50m
@@ -65,7 +65,7 @@ metadata:
     namespace: kapp-bookinfo
 spec:
     image: docker.io/istio/examples-bookinfo-reviews-v1:1.15.0
-    podAffinityType: prefer-fanout
+    preferNotCoLocated: true
     nodeSelectorLabels:
       kubernetes.io/os: linux
     # cpu: 50m
@@ -92,7 +92,7 @@ metadata:
     namespace: kapp-bookinfo
 spec:
     image: docker.io/istio/examples-bookinfo-reviews-v2:1.15.0
-    podAffinityType: prefer-fanout
+    preferNotCoLocated: true
     nodeSelectorLabels:
       kubernetes.io/os: linux
     # cpu: 50m
@@ -119,7 +119,7 @@ metadata:
     namespace: kapp-bookinfo
 spec:
     image: docker.io/istio/examples-bookinfo-reviews-v3:1.15.0
-    podAffinityType: prefer-fanout
+    preferNotCoLocated: true
     nodeSelectorLabels:
       kubernetes.io/os: linux
     # cpu: 50m
@@ -150,7 +150,7 @@ metadata:
 spec:
     image: docker.io/istio/examples-bookinfo-productpage-v1:1.15.0
     replicas: 2
-    podAffinityType: prefer-fanout
+    preferNotCoLocated: true
     nodeSelectorLabels:
       kubernetes.io/os: linux
     cpu: 50m
