--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "connected-react-router": "^6.6.1",
     "date-fns": "^2.11.1",
     "debug": "^4.1.1",
+    "driver.js": "^0.9.8",
     "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
