--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 120,
   "tabWidth": 2,
   "parser": "babel",
-  "trailingComma": "none",
+  "trailingComma": "all",
   "jsxBracketSameLine": true,
   "semi": true,
   "singleQuote": false,
