--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/redux-form": "^8.2.0",
     "@types/redux-immutable": "^4.0.1",
+    "@types/redux-logger": "^3.0.8",
     "ace-builds": "^1.4.8",
     "antd": "^3.26.11",
     "axios": "^0.19.2",
@@ -56,6 +57,7 @@
     "reconnecting-websocket": "^4.4.0",
     "redux-form": "^8.2.6",
     "redux-immutable": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
     "redux-thunk-error-handler": "^1.1.4",
