--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-labels": "^1.1.0",
-    "connected-react-router": "^6.6.1",
+    "connected-react-router": "^6.8.0",
     "date-fns": "^2.11.1",
     "debug": "^4.1.1",
     "driver.js": "^0.9.8",
@@ -75,8 +75,16 @@
     "lint": "eslint -c .eslintrc.json --ext tx,tsx src"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "husky": "^4.2.1"
