add Runnable for preInjectedFiles

--- a/controller/config/crd/bases/core.kapp.dev_components.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_components.yaml
@@ -275,9 +275,12 @@ spec:
                     type: string
                   readonly:
                     type: boolean
+                  runnable:
+                    type: boolean
                 required:
                 - content
                 - mountPath
+                - runnable
                 type: object
               type: array
             preferNotCoLocated:
