--- a/controller/config/samples/core_v1alpha1_sts_zk.yaml
+++ b/controller/config/samples/core_v1alpha1_sts_zk.yaml
@@ -14,11 +14,11 @@ metadata:
 spec:
     workloadType: statefulset
     image: zookeeper:3.5.5
-    command: "sh /config-scripts/ok"
+    command: "/bin/bash -xec /config-scripts/run"
     replicas: 1
     env:
       - name: ZK_REPLICAS
-        value: "3"
+        value: "1"
       - name: JMXAUTH
         value: "false"
       - name: JMXDISABLE
@@ -49,14 +49,17 @@ spec:
         value: "2000"
     preInjectedFiles:
       - mountPath: /config-scripts/ready
+        runnable: true
         content: |
           #!/bin/sh
           echo ruok | nc 127.0.0.1 ${1:-2181}
       - mountPath: /config-scripts/ok
+        runnable: true
         content: |
           #!/bin/sh
           echo ruok | nc 127.0.0.1 ${1:-2181}
       - mountPath: /config-scripts/run
+        runnable: true
         content: |
           #!/bin/bash
 
