add support for EnvVarTypeFieldRef

--- a/controller/config/crd/bases/core.kapp.dev_components.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_components.yaml
@@ -113,6 +113,7 @@ spec:
                     - static
                     - external
                     - linked
+                    - fieldref
                     type: string
                   value:
                     type: string
