--- a/controller/config/crd/bases/core.kapp.dev_componenttemplates.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_componenttemplates.yaml
@@ -73,6 +73,7 @@ spec:
                     - static
                     - external
                     - linked
+                    - fieldref
                     type: string
                   value:
                     type: string
