--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,3 +1,5 @@
 # https://create-react-app.dev/docs/setting-up-your-editor/#experimental-extending-the-eslint-config
 EXTEND_ESLINT=true
 REACT_APP_K8S_API_PERFIX=http://localhost:3001
+REACT_APP_K8S_API_VERSION=v1alpha1
+REACT_APP_USE_MOCK_API=true
