the magic line for zk config: quorumListenOnAllIPs=true

--- a/controller/config/samples/core_v1alpha1_sts_kafka.yaml
+++ b/controller/config/samples/core_v1alpha1_sts_kafka.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: kapp-kafka
   labels:
-#    istio-injection: enabled
+    istio-injection: enabled
     kapp-enabled: "true"
 ---
 apiVersion: core.kapp.dev/v1alpha1
