--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,5 +1,14 @@
 # https://create-react-app.dev/docs/setting-up-your-editor/#experimental-extending-the-eslint-config
 EXTEND_ESLINT=true
+
+# api prefix
 REACT_APP_K8S_API_PERFIX=http://localhost:3001
+
+# api version
 REACT_APP_K8S_API_VERSION=v1alpha1
+
+# use mock api backend for development and test
 REACT_APP_USE_MOCK_API=true
+
+# display some debug info/component; register debug middlewares/plugins
+REACT_APP_DEBUG=true
