for available vol api, also return current in use pvc for the convinience of frontend

--- a/controller/config/samples/core_v1alpha1_vol_dp.yaml
+++ b/controller/config/samples/core_v1alpha1_vol_dp.yaml
@@ -25,4 +25,4 @@ spec:
       size: 1Mi
       type: pvc
       storageClassName: kapp-standard
-      persistentVolumeClaimName: pvc-data
+      pvc: pvc-data
