only run webhook if ENABLE_WEBHOOKS == true

--- a/controller/config/manager/manager.yaml
+++ b/controller/config/manager/manager.yaml
@@ -30,7 +30,7 @@ spec:
             - /manager
           args:
             - --enable-leader-election
-          image: diveinto/tmp-controller
+          image: kappstaging/controller:latest
           imagePullPolicy: Always
           name: manager
           env:
