--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "driver.js": "^0.9.8",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "flowpoints": "^1.0.18",
     "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
