--- a/frontend/package.json
+++ b/frontend/package.json
@@ -99,9 +99,12 @@
     "@storybook/addon-backgrounds": "^5.3.19",
     "@storybook/addon-docs": "^5.3.19",
     "@storybook/addon-essentials": "^5.3.19",
+    "@storybook/addon-events": "^5.3.19",
     "@storybook/addon-info": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
+    "@storybook/addon-notes": "^5.3.19",
+    "@storybook/addon-queryparams": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addon-viewport": "^5.3.19",
     "@storybook/addons": "^5.3.19",
@@ -110,6 +113,7 @@
     "@storybook/react": "^5.3.19",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "event-emitter": "^0.3.5",
     "husky": "^4.2.1",
     "prettier": "^2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
