--- a/api/.env.sample
+++ b/api/.env.sample
@@ -1,3 +1,2 @@
 LOG_LEVEL=DEBUG
-
-# use -h flag to get more configurable environment variables
+KALM_ISTIO_PROMETHEUS_API_ADDRESS=http://localhost:9090
