--- a/controller/config/crd/bases/core.kapp.dev_httpscertissuers.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_httpscertissuers.yaml
@@ -48,6 +48,13 @@ spec:
               type: object
             caForTest:
               type: object
+            http01:
+              properties:
+                email:
+                  type: string
+              required:
+              - email
+              type: object
           type: object
         status:
           description: HttpsCertIssuerStatus defines the observed state of HttpsCertIssuer
