--- a/controller/.gitignore
+++ b/controller/.gitignore
@@ -32,6 +32,7 @@ core_v1alpha1_application-dev.yaml
 core_v1alpha1_plugin-test.yaml
 ca.crt
 core_v1alpha1_hello-world-kapp-live.yaml
+*.local.yaml
 
 *.pem
 *.crt
