add example HttpsCertIssuer using http01

--- a/controller/config/samples/core_v1alpha1_httpscertissuer.yaml
+++ b/controller/config/samples/core_v1alpha1_httpscertissuer.yaml
@@ -13,3 +13,11 @@ spec:
 #   acmeCloudFlare:
 #     email: foo@bar.com
 #     apiKey: abcd
+#---
+#apiVersion: core.kapp.dev/v1alpha1
+#kind: HttpsCertIssuer
+#metadata:
+#  name: httpscertissuer-sample
+#spec:
+#  http01:
+#    email: your-email@example.com
