Add Application list story

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -78,8 +78,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint -c .eslintrc.json --ext tx,tsx src --max-warnings 0",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "NODE_ENV=test start-storybook -p 9009 -s public",
+    "build-storybook": "NODE_ENV=test build-storybook -s public"
   },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
