1. operator now install dashboard 2. fix rabc for dashboard

--- a/operator/config/crd/bases/install.kapp.dev_kappoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kapp.dev_kappoperatorconfigs.yaml
@@ -34,9 +34,13 @@ spec:
         spec:
           description: KappOperatorConfigSpec defines the desired state of KappOperatorConfig
           properties:
+            dashboardVersion:
+              type: string
             skipCertManagerInstallation:
               type: boolean
             skipIstioInstallation:
+              type: boolean
+            skipKalmControllerInstallation:
               type: boolean
             skipKappControllerInstallation:
               type: boolean
