--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -337,6 +337,14 @@ rules:
   - update
   - watch
 - apiGroups:
+  - metrics.k8s.io
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - networking.istio.io
   resources:
   - gateways
