operator enable rbac on group: core.kapp.dev

--- a/operator/config/rbac/role.yaml
+++ b/operator/config/rbac/role.yaml
@@ -94,6 +94,12 @@ rules:
   verbs:
   - '*'
 - apiGroups:
+  - core.kapp.dev
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- apiGroups:
   - extensions
   resources:
   - daemonsets
