open all permission on metrics.k8s.io

--- a/operator/config/samples/install_v1alpha1_kappoperatorconfig.yaml
+++ b/operator/config/samples/install_v1alpha1_kappoperatorconfig.yaml
@@ -1,3 +1,9 @@
+# install OperatorResource to install:
+# - cert-manager
+# - istio
+# - Kalm CRD & Roles
+# - Kalm controller
+# - Kalm dashboard
 apiVersion: v1
 kind: Namespace
 metadata:
