--- a/kapp-install.yaml
+++ b/kapp-install.yaml
@@ -1,5 +1,3 @@
-# intall kapp-operator
-
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -41,9 +39,13 @@ spec:
         spec:
           description: KappOperatorConfigSpec defines the desired state of KappOperatorConfig
           properties:
+            dashboardVersion:
+              type: string
             skipCertManagerInstallation:
               type: boolean
             skipIstioInstallation:
+              type: boolean
+            skipKalmControllerInstallation:
               type: boolean
             skipKappControllerInstallation:
               type: boolean
@@ -186,6 +188,12 @@ rules:
   - '*'
 - apiGroups:
   - config.istio.io
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- apiGroups:
+  - core.kapp.dev
   resources:
   - '*'
   verbs:
@@ -396,9 +404,14 @@ spec:
 # install OperatorResource to install:
 # - cert-manager
 # - istio
-# - Kalm CRD & Roles 
+# - Kalm CRD & Roles
 # - Kalm controller
 # - Kalm dashboard
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kapp-operator
+---
 apiVersion: install.kapp.dev/v1alpha1
 kind: KappOperatorConfig
 metadata:
