--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "connected-react-router": "^6.8.0",
+    "copy-to-clipboard": "^3.3.1",
     "date-fns": "^2.11.1",
     "debug": "^4.1.1",
     "driver.js": "^0.9.8",
