--- a/frontend/package.json
+++ b/frontend/package.json
@@ -118,6 +118,7 @@
     "husky": "^4.2.1",
     "prettier": "^2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
+    "redux-form-storybook": "^1.0.2",
     "storybook-addon-deps": "^2.0.1",
     "ts-loader": "^7.0.5"
   },
