--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -11,6 +11,8 @@ resources:
 - bases/core.kapp.dev_httpscerts.yaml
 - bases/core.kapp.dev_dockerregistries.yaml
 - bases/core.kapp.dev_httproutes.yaml
+- bases/core.kapp.dev_singlesignonconfigs.yaml
+- bases/core.kapp.dev_protectedendpoints.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -26,6 +28,8 @@ patchesStrategicMerge:
 #- patches/webhook_in_httpscerts.yaml
 #- patches/webhook_in_dockerregistries.yaml
 #- patches/webhook_in_httproutes.yaml
+#- patches/webhook_in_singlesignonconfigs.yaml
+#- patches/webhook_in_protectedendpoints.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -40,6 +44,8 @@ patchesStrategicMerge:
 #- patches/cainjection_in_httpscerts.yaml
 #- patches/cainjection_in_dockerregistries.yaml
 #- patches/cainjection_in_httproutes.yaml
+#- patches/cainjection_in_singlesignonconfigs.yaml
+#- patches/cainjection_in_protectedendpoints.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
