--- a/.travis.yml
+++ b/.travis.yml
@@ -88,8 +88,8 @@ jobs:
       install:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       script:
-        - docker build . -t kappstaging/dashboard:latest
-        - docker push kappstaging/dashboard:latest
+        - docker build . -t kalmstaging/dashboard:latest
+        - docker push kalmstaging/dashboard:latest
     - language: go
       go:
         - 1.13
@@ -104,7 +104,7 @@ jobs:
       script:
         - cd controller
         - make deploy
-        - kubectl -n kapp-system patch deployment kapp-controller -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
+        - kubectl -n kalm-system patch deployment kalm-controller -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
     - language: go
       go:
         - 1.13
@@ -119,7 +119,7 @@ jobs:
       script:
         - cd operator
         - make deploy
-        - kubectl -n kapp-operator patch deployment kapp-operator -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
+        - kubectl -n kalm-operator patch deployment kalm-operator -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
     - language: go
       go:
         - 1.13
@@ -132,5 +132,5 @@ jobs:
         - mkdir ${HOME}/.kube
         - echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
       script:
-        - kubectl apply -f controller/config/samples/core_v1alpha1_kapp_dashboard.yaml
-        - kubectl delete pod -n kapp-system $(kubectl get pods -n kapp-system -l app=kapp-dashboard -o jsonpath="{.items[].metadata.name}")
+        - kubectl apply -f controller/config/samples/core_v1alpha1_kalm_dashboard.yaml
+        - kubectl delete pod -n kalm-system $(kubectl get pods -n kalm-system -l app=kalm-dashboard -o jsonpath="{.items[].metadata.name}")
