--- a/controller/config/manager/manager.yaml
+++ b/controller/config/manager/manager.yaml
@@ -30,7 +30,7 @@ spec:
             - /manager
           args:
             - --enable-leader-election
-          image: kalmstaging/controller:latest
+          image: quay.io/kalmhq/kalm-controller:latest
           imagePullPolicy: Always
           name: manager
           env:
