--- a/operator/config/manager/kustomization.yaml
+++ b/operator/config/manager/kustomization.yaml
@@ -1,8 +1,8 @@
 resources:
-- manager.yaml
+  - manager.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
-- name: controller
-  newName: kalmstaging/operator
-  newTag: latest
+  - name: controller
+    newName: quay.io/kalmhq/kalm-operator
+    newTag: latest
