--- a/operator/Makefile
+++ b/operator/Makefile
@@ -1,6 +1,6 @@
 
 # Image URL to use all building/pushing image targets
-IMG ?= kalmhq/kalm-operator:latest
+IMG ?= quay.io/kalmhq/kalm-operator:latest
 # Produce CRDs that work back to Kubernetes 1.11 (no version conversion)
 CRD_OPTIONS ?= "crd:trivialVersions=true"
 
