--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -96,6 +96,12 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - serviceaccounts
+  verbs:
+  - '*'
+- apiGroups:
+  - ""
+  resources:
   - services
   verbs:
   - create
@@ -105,6 +111,12 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - create
 - apiGroups:
   - apps
   resources:
@@ -353,6 +365,12 @@ rules:
   - patch
   - update
 - apiGroups:
+  - dex.coreos.com
+  resources:
+  - '*'
+  verbs:
+  - create
+- apiGroups:
   - extensions
   resources:
   - daemonsets
@@ -434,6 +452,13 @@ rules:
   - networking.istio.io
   resources:
   - virtualservices
+  verbs:
+  - '*'
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - clusterrolebindings
+  - clusterroles
   verbs:
   - '*'
 - apiGroups:
