check if install is ready

--- a/kalm-install-kalmoperatorconfig.yaml
+++ b/kalm-install-kalmoperatorconfig.yaml
@@ -4,6 +4,11 @@
 # - Kalm CRD & Roles
 # - Kalm controller
 # - Kalm dashboard
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kalm-operator
+---
 apiVersion: install.kalm.dev/v1alpha1
 kind: KalmOperatorConfig
 metadata:
