--- a/controller/config/manager/manager.yaml
+++ b/controller/config/manager/manager.yaml
@@ -22,6 +22,8 @@ spec:
     metadata:
       labels:
         control-plane: controller
+        sidecar.istio.io/proxyCPU: "10m"
+        sidecar.istio.io/proxyMemory: "50m"
     spec:
       imagePullSecrets:
         - name: docker-registry-secret
@@ -41,6 +43,6 @@ spec:
               cpu: 100m
               memory: 256Mi
             requests:
-              cpu: 100m
+              cpu: 10m
               memory: 128Mi
       terminationGracePeriodSeconds: 10
