--- a/operator/resources/istiocontrolplane.yaml
+++ b/operator/resources/istiocontrolplane.yaml
@@ -10,3 +10,14 @@ metadata:
   name: istiocontrolplane
 spec:
   profile: default
+  components:
+    pilot:
+      k8s:
+        resources:
+          requests:
+            cpu: 100m
+            memory: 256Mi
+#  resources:
+#    requests:
+#      cpu: 10m
+#      memory: 128Mi
