--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
     "driver.js": "^0.9.8",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "flowpoints": "^1.0.18",
+    "flowpoints": "git+https://github.com/iAladdin/flowpoints.js.git#23d517320c12eb7077ba8b5d8fdda3bfc1eeabd4",
     "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
