--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
 - bases/core.kalm.dev_httproutes.yaml
 - bases/core.kalm.dev_singlesignonconfigs.yaml
 - bases/core.kalm.dev_protectedendpoints.yaml
+- bases/core.kalm.dev_deploykeys.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -30,6 +31,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_httproutes.yaml
 #- patches/webhook_in_singlesignonconfigs.yaml
 #- patches/webhook_in_protectedendpoints.yaml
+#- patches/webhook_in_deploykeys.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -46,6 +48,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_httproutes.yaml
 #- patches/cainjection_in_singlesignonconfigs.yaml
 #- patches/cainjection_in_protectedendpoints.yaml
+#- patches/cainjection_in_deploykeys.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
