run test-ci-cd-job at both master and deploy-key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,7 +203,9 @@ workflows:
       - test-ci-cd-job:
           filters:
             branches:
-              only: deploy-key
+              only: 
+                - deploy-key
+                - master
   dashboard:
     jobs:
       - test-dashboard
