--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  hello: kalmhq-ns1/hello-orb@dev:0.0.1
+  hello-orb: kalmhq-ns1/hello-orb@dev:0.0.1
 jobs:
   test-ci-cd-job:
     docker: 
@@ -202,7 +202,8 @@ workflows:
   version: 2
   test-ci-cd-workflow:
     jobs:
-      - hello/run1
+      - hello-orb/run1:
+          param1: "this-is-passedin-param1"
       - test-ci-cd-job:
           context: deploy-demo-cluster
           filters:
