--- a/.circleci/hello-orb.yml
+++ b/.circleci/hello-orb.yml
@@ -13,6 +13,11 @@ jobs:
     description: |
       Describes a welcome message, common environment variables, and documentation links used to get started with CircleCI.
     executor: default
+    parameters:
+      param1:
+        description: "some param for test"
+        default: "this-is-default-param1-value"
+        type: string
     steps:
     - run:
         command: welcome_message.sh
@@ -27,6 +32,6 @@ jobs:
         command: concepts.sh
         name: 'Help Topic: Overview and Concepts'
     - run:
-        command: using_the_cli.sh
+        command: echo "<< parameters.param1 >>"
         name: 'Help Topic: Using the CLI'
 version: 2.1
