--- a/controller/config/crd/bases/core.kalm.dev_dockerregistries.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_dockerregistries.yaml
@@ -51,8 +51,6 @@ spec:
               type: string
             poolingIntervalSeconds:
               type: integer
-          required:
-          - host
           type: object
         status:
           description: DockerRegistryStatus defines the observed state of DockerRegistry
@@ -88,6 +86,8 @@ spec:
                 type: object
               type: array
           type: object
+      required:
+      - spec
       type: object
   version: v1alpha1
   versions:
